--- a/DDIblog/templates/index.html
+++ b/DDIblog/templates/index.html
@@ -42,7 +42,7 @@
                    required>
             <button class="btn btn-lg btn-default btn-block" type="submit">Войти</button>
             <div class="col-md-13 col-md-offset-9 center-block" style="margin-top: 2px">
-            <a class="btn btn-lg btn-default btn-block" href="/register/"> Зарегистрироваться</a>
+            <a class="btn btn-lg btn-default btn-block" href="{% url 'register' %}"> Зарегистрироваться</a>
             </div>
         </form>
 
