--- a/DDIblog/templates/blog/post.html
+++ b/DDIblog/templates/blog/post.html
@@ -57,8 +57,8 @@
     <nav aria-label="Page navigation example">
           <ul class="pagination">
               <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
-                {% if pervious_page %}
-                <li class="page-item"><a class="page-link" href="?page={{ pervious_page }}">{{ pervious_page }}</a></li>
+                {% if previous_page %}
+                <li class="page-item"><a class="page-link" href="?page={{ previous_page }}">{{ previous_page }}</a></li>
                 {% endif %}
               <li class="page-item"><a class="page-link" href="?page={{ cur_page }}">{{ cur_page }}</a></li>
                 {% if next_page %}
@@ -80,7 +80,4 @@
         </div>
            </div>
     </form>
-
-
-
 {% endblock %}
